# SimpleRenderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  camera_setup.txt  main.cpp
assets/Data/: 512x512x1x_float32.raw  512x512x1x_uint16.raw
assets/mocap_data/: positions_only_mocap_data.txt  rotations_only_mocap_data.txt
assets/models/: Humvee50k.mtl  MayaExportNotes.txt  sphere.dae  sphere.fbx
assets/models/KidsRoomModel/: kidsRoom.ma  kidsroom.dae
assets/models/KidsRoomModel/Materials/: humanCombined.mat  lambert11.mat  lambert17.mat  lambert18.mat  moonForest.mat  mothTexture.mat
assets/ui/: settings.rcss  settings.tga
libraries/assimp/: CMakeLists.txt
shaders/: bicubicFilter.frag  bicubicFilter.vert  coloredVerts.frag  coloredVerts.vert  copyFBO.frag  copyFBO.vert  dfCubesFrag.glsl  dfNoisedShapesFrag.glsl  dfPathTracer.glsl  fragColoredVerts.glsl  fragShader.glsl  lanczosFilter.frag  lanczosFilter.vert  paintHeightDraw.frag  paintHeightDraw.vert  painterSim.frag  painterSim.vert  passThroughVS.glsl  pathTracerStart.glsl  pathTracingSphereTracer.glsl  raymarchCTScanFrag.glsl  raymarchCTScanFragISO.glsl  raymarchCloudFrag.glsl  raymarchGeom.glsl  raymarchVert.glsl  texturedMesh.frag  texturedMesh.vert  tonemapping.frag  tonemapping.vert  triangleShaders.glsl  vertColoredVerts.glsl  vertShader.glsl  waveSim.frag  waveSim.vert  waveSimDraw.frag  waveSimDraw.vert
shaders/MarchingCubes/: TestG80_FS.glsl  TestG80_FS_Simple.glsl  TestG80_GS.glsl  TestG80_GS2.glsl  TestG80_VS.glsl  TestG80_VS2.glsl
shaders/fluids/: Advect.frag  Buoyancy.frag  ComputeDivergence.frag  Jacobi.frag  Splat.frag  SubtractGradient.frag  Vertex.vert  Visualize.frag
shaders/fluids3d/: Advect.frag  Buoyancy.frag  ComputeDivergence.frag  FillRed.frag  Jacobi.frag  PickLayer.geom  Raycast.frag  Raycast.vert  Splat.frag  SubtractGradient.frag  Vertex.vert
shaders/model/: modelFragShader.glsl  modelVertShader.glsl
shaders/ui/: librocket_no_texture.vert  librocket_with_texture.vert  textured_quad.frag
source/: EngineObject.cpp  EngineObject.h  EngineObjectFactory.cpp  EngineObjectFactory.h  EngineObjectManager.cpp  EngineObjectManager.h  GLFWTime.cpp  GLFWTime.h  Globals.cpp  WindowManager.cpp  WindowManager.h  allmath.h  md5.cpp  md5.h
source/PlatformClasses/: Platform.h  PlatformAll.cpp  PlatformAll.h
source/PlatformClasses/Apple/MacClasses/: Platform_Mac.h  Platform_Mac.mm
source/PlatformClasses/Unix/: Platform_Unix.cpp  Platform_Unix.h
source/PlatformClasses/Windows/: Platform_Win32.cpp  Platform_Win32.h
source/renderlib/: Collision.h  FPSController.cpp  FPSController.h  FluidSim.cpp  FluidSim.h  FluidSim3D.h  Grid.cpp  Grid.h  IControllable.h  IRenderable.h  ImageUtils.cpp  ImageUtils.h  InputManager.cpp  InputManager.h  InstancedMeshRenderer.cpp  InstancedMeshRenderer.h  IntersectionTests.h  MarchingCubesRenderer.cpp  MarchingCubesRenderer.h  Material.cpp  Material.h  MidiDrum.h  Model.cpp  Model.h  ObjectIDGenerator.cpp  ObjectIDGenerator.h  OpenGLHelper.h  Painter.cpp  Painter.h  PlatformRoom.cpp  PlatformRoom.h  RenderManager.cpp  RenderManager.h  RenderTexture.cpp  RenderTexture.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  SimpleCamera.h  (+31 more)
source/renderlib/data_str/: circular_buffer.h  hash_funcs.cpp  hash_funcs.h  hash_map.h  hash_map_managed.h  hash_set.h  min_heap.h  pair.h  triple.h  vector.h  vector_managed.h
source/renderlib/exceptions/: wruntime_error.cpp  wruntime_error.h
source/renderlib/experimental/: FluidSim3D.cpp
source/renderlib/libpng/: png.h  pngpread.c  pngrutil.c  pngset.c  pngwio.c  pngwutil.c
source/renderlib/string_util/: string_util.cpp  string_util.h  win32_debug_buffer.h
source/renderlib/ui/: rocket_event_listener.h  rocket_file_interface.h  rocket_render_interface.cpp  rocket_render_interface.h  rocket_system_interface.h  simple_rocket_event_listener.cpp  simple_rocket_event_listener.h  simple_rocket_file_interface.cpp  simple_rocket_file_interface.h  simple_rocket_render_interface.cpp  simple_rocket_render_interface.h  simple_rocket_system_interface.cpp  simple_rocket_system_interface.h  simple_ui.cpp  simple_ui.h  ui.h
